--- a/myreportapp/www/css/general.css
+++ b/myreportapp/www/css/general.css
@@ -1,8 +1,28 @@
-body{
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: 'Arial', sans-serif;
+  }
+
+  .toastify {
+    padding: 12px 20px;
+    color: #ff4b2b;;
+    display: inline-block;
+    box-shadow: 0 3px 6px -1px rgba(0, 0, 0, 0.12), 0 10px 36px -4px rgba(77, 96, 232, 0.3);
+    background-color: white;
+    position: fixed;
+    top: -150px;
+    right: 15px;
+    opacity: 0;
+    transition: all 0.4s cubic-bezier(0.215, 0.61, 0.355, 1);
+    border-radius: 2px;
+    cursor: pointer;
+  }
+  .toastify.on { opacity: 1; }
+
 header{
-    background-color:rgb(0, 153, 254);
+    background-color:#ff4b2b;
     padding:17px 20px;
     color: white;
     position: fixed;
@@ -38,11 +58,34 @@ footer{
 }
 
 .bottom-nav{
-    background-color: 'white';
+    background-color:#eee;
 }
 
 .bottom-nav ul{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+}
+
+.not-found{
+    display: none;
+    position: absolute;
+    top: 50%;
+    left:50%;
+    transform: translate(-50%,-50%)
+}
+.not-found h2{
+    font-size: larger;
+    font-weight:bold;
+    text-wrap: nowrap;
+}
+
+
+.not-found div{
+    display: flex;
+    flex-direction: column;
+    gap:20px;
+    justify-content: center;
+    align-items: center;
+    border-color: #ff4b2b;
 }
