--- a/myreportapp/www/css/post.css
+++ b/myreportapp/www/css/post.css
@@ -60,7 +60,7 @@ body{
     padding: 15px;
     border: none;
     color: white;
-    background-color:rgb(0, 153, 254);
+    background-color:#ff4b2b;
     border-radius: 10px;
     width: 60%;
     font-size: 16px;
