--- a/myreportapp/www/css/user.css
+++ b/myreportapp/www/css/user.css
@@ -8,7 +8,13 @@
 }
 
 #profile-image{
-    width:70px;
+    width:40px;
     height: auto;
     border-radius: 20px;
+}
+
+#profile-name{
+    font-size: large;
+    font-weight: 600;
+    padding: 10px;
 }
